--- a/Web.MainApplication/Views/Batch/Create.cshtml
+++ b/Web.MainApplication/Views/Batch/Create.cshtml
@@ -44,7 +44,7 @@
                     </div>
                 </div>
 
-                <div clsass="form-group">
+                <div class="form-group">
                     <div class="col-md-2 control-label">
                         <input type="button" id="btnDelete" value="Delete" class="btn btn-default" />
                         <input type="button" id="btnAdd" value="Add" class="btn btn-default" />
