--- a/Web.MainApplication/Views/BatchMixes/Create.cshtml
+++ b/Web.MainApplication/Views/BatchMixes/Create.cshtml
@@ -19,7 +19,6 @@
 
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
                     @Html.LabelFor(model => model.BatchMixCode, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -39,12 +38,12 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.OutputProduct, "Output Product", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("RawProduct", null, htmlAttributes: new { @class = "form-control", @required = "required" })
+                        @Html.DropDownList("OutputProduct", (SelectList)ViewBag.MatureProduct , null, htmlAttributes: new { @class = "form-control", @required = "required" })
                         @Html.ValidationMessageFor(model => model.OutputProduct, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-                <div clsass="form-group">
+                <div class="form-group">
                     <div class="col-md-2 control-label">
                         <input type="button" id="btnDelete" value="Delete" class="btn btn-default" />
                         <input type="button" id="btnAdd" value="Add" class="btn btn-default" />
@@ -62,7 +61,7 @@
                         foreach (var item in Model.BatchMixProduct.OrderBy(x => x.ProductSourcePercentage))
                         {
 
-                            listSelect.Add(new SelectList(((SelectList)ViewBag.MatureProduct).ToList(), "Value", "Text", item.ProductSourceId));
+                            listSelect.Add(new SelectList(((SelectList)ViewBag.RawProduct).ToList(), "Value", "Text", item.ProductSourceId));
 
                             <div id="MatureProductFormChild_@counter">
                                 <div class="form-group">
@@ -77,7 +76,7 @@
                                     @Html.LabelFor(model => model.OutputProduct, "Percentage ", htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
                                         @Html.TextBox("ProductPercentageChild_" + counter, item.ProductSourcePercentage, htmlAttributes: new { @class = "form-control", @required = "required", @maxlength = "6" })
-                                      @*  @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })*@
+                                        @*  @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })*@
                                     </div>
                                 </div>
                             </div>
