--- a/Web.MainApplication/Views/BatchMixes/Delete.cshtml
+++ b/Web.MainApplication/Views/BatchMixes/Delete.cshtml
@@ -3,78 +3,66 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="box box-solid">
+    <div class="box-header with-border">
+        <h3 class="box-title">
+            Delete - BatchMix
+        </h3>
+        <h4>Are you sure you want to delete this?</h4>
+    </div>
+    <!-- /.box-header -->
+    <div class="box-body">
+        <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.BatchMixName)
+                </dt>
 
-<h2>Delete</h2>
+                <dd>
+                    @Html.DisplayFor(model => model.BatchMixName)
+                </dd>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>BatchMix</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.BatchMixName)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.BatchMixName)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.PRODUCT.PRODUCTNAME)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.PRODUCT.PRODUCTNAME)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedBy)
-        </dd>
+                @{
+                    foreach (var item in Model.BatchMixProduct)
+                    {
+                        <dt>
+                            Source Product
+                        </dt>
+                        <dd>
+                            @item.ProductSourceId
+                        </dd>
+                        <dd>
+                            @item.PRODUCT.PRODUCTNAME
+                        </dd>
+                        <dd>
+                            @item.ProductSourcePercentage.ToString() %
+                        </dd>
+                    }
+                }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedDate)
-        </dt>
+            </dl>
+    </div>
+    <div class="box-footer">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PRODUCT.PRODUCTNAME)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PRODUCT.PRODUCTNAME)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
 </div>
