--- a/Web.MainApplication/Views/Employee/Create.cshtml
+++ b/Web.MainApplication/Views/Employee/Create.cshtml
@@ -89,9 +89,8 @@
 
 <script type="text/javascript">
     (function ($) {
-        $('#EMPLOYEEJOINAT').datepicker({
-            autoclose: true,
-            format: 'dd/mm/yyyy'
-        }).val();
+        $('#EMPLOYEEJOINAT').datetimepicker({
+            format: 'MM/DD/YYYY HH:mm:ss'
+        });
     }(jQuery));
 </script>
