--- a/Web.MainApplication/Views/AspNetGroupUsers/Create.cshtml
+++ b/Web.MainApplication/Views/AspNetGroupUsers/Create.cshtml
@@ -6,10 +6,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>AspNetGroupUser</h4>
         <hr />
@@ -73,7 +73,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("IsActive", null, htmlAttributes : new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
             </div>
         </div>
