--- a/Web.MainApplication/Views/AspNetGroups/Edit.cshtml
+++ b/Web.MainApplication/Views/AspNetGroups/Edit.cshtml
@@ -20,69 +20,68 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.GroupName)
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.GroupName)
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.GroupDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.GroupDescription, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.GroupDescription, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Remark, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Remark, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Remark, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-
-                    @Html.Label("Roles", htmlAttributes: new { @class = "control-label col-md-2" })
-
-                    <div class="col-md-10">
-                        @{
-                            foreach (var item in dictionaryRoles.OrderBy(x => x.Value))
-                            {
-                        <label>
-                            @Html.CheckBox(item.Key, Model.AspNetRoleGroup.Where(x => x.RolesId.ToString() == item.Key).FirstOrDefault() != null ? true : false)
-                            @{
-                                if (Model.AspNetRoleGroup.Where(x => x.RolesId.ToString() == item.Key).FirstOrDefault() != null)
-                                {
-                                    @Html.Label(item.Value, htmlAttributes: new { @style = "color:#00a65a" })
-                                }
-                                else
-                                {
-
-                                    @Html.Label(item.Value, htmlAttributes: new { @style = "color:#dd4b39" })
-                                }
-                            }
-                        </label>
-                                <br />
-                            }
-                        }
-                    </div>
-                </div>
-
-
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.GroupDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.GroupDescription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.GroupDescription, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Remark, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Remark, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Remark, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("IsActive", null, htmlAttributes: new { @class = "form-control", @required = "required" })
+                    @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+
+                @Html.Label("Roles", htmlAttributes: new { @class = "control-label col-md-2" })
+
+                <div class="col-md-10">
+                    @{
+                        foreach (var item in dictionaryRoles.OrderBy(x => x.Value))
+                        {
+                            <label>
+                                @Html.CheckBox(item.Key, Model.AspNetRoleGroup.Where(x => x.RolesId.ToString() == item.Key).FirstOrDefault() != null ? true : false)
+                                @{
+                                    if (Model.AspNetRoleGroup.Where(x => x.RolesId.ToString() == item.Key).FirstOrDefault() != null)
+                                    {
+                                        @Html.Label(item.Value, htmlAttributes: new { @style = "color:#00a65a" })
+                                    }
+                                    else
+                                    {
+
+                                        @Html.Label(item.Value, htmlAttributes: new { @style = "color:#dd4b39" })
+                                    }
+                                }
+                            </label>
+                            <br />
+                        }
+                    }
+                </div>
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
         }
 
         <div>
