--- a/Web.MainApplication/Views/Batch/Edit.cshtml
+++ b/Web.MainApplication/Views/Batch/Edit.cshtml
@@ -17,80 +17,87 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.BatchCode)
-                <div class="form-group">
-                    @Html.LabelFor(model => model.BatchCode, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.TextBox("BatchCodeDisplay", Model.BatchCode, htmlAttributes: new { @class = "form-control", @readonly = "true" })
-                        @Html.ValidationMessageFor(model => model.BatchCode, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.BatchName, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.BatchName, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.BatchName, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.RawProduct, "RawProduct", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("RawProduct", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-2 control-label">
-                        <input type="button" id="btnDelete" value="Delete" class="btn btn-default" />
-                        <input type="button" id="btnAdd" value="Add" class="btn btn-default" />
-                    </div>
-                    <div class="col-md-10">
-                        <label id="lblTotalProductMature" class="h4"></label>
-                        @Html.Hidden("totalComposedProduct")
-                    </div>
-                </div>
-                <div id="productMatureList">
-                    @{int counter = 1;
-                        List<SelectList> listSelect = new List<SelectList>();
-                        foreach (var item in Model.BatchProduct.OrderBy(x => x.ProductPercentage))
-                        {
-
-                            listSelect.Add(new SelectList(((SelectList)ViewBag.MatureProduct).ToList(), "Value", "Text", item.ProductId));
-
-                            <div id="MatureProductFormChild_@counter">
-                                <div class="form-group">
-                                    @Html.Label("", "Composed Product " + counter, htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10">
-                                        @Html.DropDownList("ComposedProductChild_" + counter.ToString(), listSelect.ElementAt(counter - 1), new { @class = "form-control", @required = "required" })
-                                        @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.RawProduct, "Percentage ", htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10">
-                                        @Html.TextBox("ProductPercentageChild_" + counter, item.ProductPercentage, htmlAttributes: new { @class = "form-control", @required = "required", @maxlength = "6" })
-                                        @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                            </div>
-                            counter++;
-                        }
-
-                    }
-
-                </div>
-
-
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.BatchCode)
+            <div class="form-group">
+                @Html.LabelFor(model => model.BatchCode, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextBox("BatchCodeDisplay", Model.BatchCode, htmlAttributes: new { @class = "form-control", @readonly = "true" })
+                    @Html.ValidationMessageFor(model => model.BatchCode, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.BatchName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BatchName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.BatchName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.RawProduct, "RawProduct", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("RawProduct", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("IsActive", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-2 control-label">
+                    <input type="button" id="btnDelete" value="Delete" class="btn btn-default" />
+                    <input type="button" id="btnAdd" value="Add" class="btn btn-default" />
+                </div>
+                <div class="col-md-10">
+                    <label id="lblTotalProductMature" class="h4"></label>
+                    @Html.Hidden("totalComposedProduct")
+                </div>
+            </div>
+            <div id="productMatureList">
+                @{int counter = 1;
+                    List<SelectList> listSelect = new List<SelectList>();
+                    foreach (var item in Model.BatchProduct.OrderBy(x => x.ProductPercentage))
+                    {
+
+                        listSelect.Add(new SelectList(((SelectList)ViewBag.MatureProduct).ToList(), "Value", "Text", item.ProductId));
+
+                        <div id="MatureProductFormChild_@counter">
+                            <div class="form-group">
+                                @Html.Label("", "Composed Product " + counter, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.DropDownList("ComposedProductChild_" + counter.ToString(), listSelect.ElementAt(counter - 1), new { @class = "form-control", @required = "required" })
+                                    @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.RawProduct, "Percentage ", htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.TextBox("ProductPercentageChild_" + counter, item.ProductPercentage, htmlAttributes: new { @class = "form-control", @required = "required", @maxlength = "6" })
+                                    @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                        </div>
+                        counter++;
+                    }
+
+                }
+
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
                         }
 
         <div class="box-footer">
