--- a/Web.MainApplication/Views/Contract/Create.cshtml
+++ b/Web.MainApplication/Views/Contract/Create.cshtml
@@ -138,6 +138,13 @@
                 </div>
             </div>
             <div class="form-group">
+                @Html.Label("IsActive", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("IsActive", null, htmlAttributes: new { @class = "form-control", @required = "true" })
+                    @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="form-group">
                 <div class="col-md-2 control-label">
                     <input type="button" id="btnDelete" value="Delete" class="btn btn-default" />
                     <input type="button" id="btnAdd" value="Add" class="btn btn-default" />
