--- a/Web.MainApplication/Views/Ritase/Create.cshtml
+++ b/Web.MainApplication/Views/Ritase/Create.cshtml
@@ -8,7 +8,7 @@
 <div class="box box-solid">
     <div class="box-header with-border">
         <h3 class="box-title">
-            Create - Delivery Request
+            Create - Ritase
         </h3>
     </div>
     <!-- /.box-header -->
