--- a/Web.MainApplication/Views/BatchMixes/Create.cshtml
+++ b/Web.MainApplication/Views/BatchMixes/Create.cshtml
@@ -46,7 +46,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("IsActive", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownList("IsActive", null, htmlAttributes: new { @class = "form-control", @required = "required" })
                     @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
                 </div>
             </div>
