--- a/Web.MainApplication/Views/BatchMixes/Edit.cshtml
+++ b/Web.MainApplication/Views/BatchMixes/Edit.cshtml
@@ -17,84 +17,90 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.BatchMixCode, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.BatchMixCode, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
-                        @Html.ValidationMessageFor(model => model.BatchMixCode, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.BatchMixName, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.BatchMixName, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
-                        @Html.ValidationMessageFor(model => model.BatchMixName, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.OutputProduct, "Output Product", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("OutputProduct", (SelectList)ViewBag.MatureProduct, null, htmlAttributes: new { @class = "form-control", @required = "required" })
-                        @Html.ValidationMessageFor(model => model.OutputProduct, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-2 control-label">
-                        <input type="button" id="btnDelete" value="Delete" class="btn btn-default" />
-                        <input type="button" id="btnAdd" value="Add" class="btn btn-default" />
-                    </div>
-                    <div class="col-md-10">
-                        <label id="lblTotalProductMature" class="h4"></label>
-                        @Html.Hidden("totalComposedProduct")
-                    </div>
-                </div>
-
-
-                <div id="productMatureList">
-                    @{int counter = 1;
-                        List<SelectList> listSelect = new List<SelectList>();
-                        foreach (var item in Model.BatchMixProduct.OrderBy(x => x.ProductSourcePercentage))
-                        {
-
-                            listSelect.Add(new SelectList(((SelectList)ViewBag.RawProduct).ToList(), "Value", "Text", item.ProductSourceId));
-
-                            <div id="MatureProductFormChild_@counter">
-                                <div class="form-group">
-                                    @Html.Label("", "Composed Product " + counter, htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10">
-                                        @Html.DropDownList("ComposedProductChild_" + counter.ToString(), listSelect.ElementAt(counter - 1), new { @class = "form-control", @required = "required" })
-                                        @*@Html.ValidationMessageFor(model => model., "", new { @class = "text-danger" })*@
-                                    </div>
-                                </div>
-
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.OutputProduct, "Percentage ", htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10">
-                                        @Html.TextBox("ProductPercentageChild_" + counter, item.ProductSourcePercentage, htmlAttributes: new { @class = "form-control money-format2", @required = "required", @maxlength = "6" })
-                                        @*  @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })*@
-                                    </div>
-                                </div>
-                            </div>
-                            counter++;
-                        }
-
-                    }
-
-                </div>
-
-
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
+        <div class="form-horizontal">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.BatchMixCode, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BatchMixCode, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                    @Html.ValidationMessageFor(model => model.BatchMixCode, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.BatchMixName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.BatchMixName, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                    @Html.ValidationMessageFor(model => model.BatchMixName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.OutputProduct, "Output Product", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("OutputProduct", (SelectList)ViewBag.MatureProduct, null, htmlAttributes: new { @class = "form-control", @required = "required" })
+                    @Html.ValidationMessageFor(model => model.OutputProduct, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-2 control-label">
+                    <input type="button" id="btnDelete" value="Delete" class="btn btn-default" />
+                    <input type="button" id="btnAdd" value="Add" class="btn btn-default" />
+                </div>
+                <div class="col-md-10">
+                    <label id="lblTotalProductMature" class="h4"></label>
+                    @Html.Hidden("totalComposedProduct")
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("IsActive", null, htmlAttributes: new { @class = "form-control", @required = "required" })
+                    @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div id="productMatureList">
+                @{int counter = 1;
+                    List<SelectList> listSelect = new List<SelectList>();
+                    foreach (var item in Model.BatchMixProduct.OrderBy(x => x.ProductSourcePercentage))
+                    {
+
+                        listSelect.Add(new SelectList(((SelectList)ViewBag.RawProduct).ToList(), "Value", "Text", item.ProductSourceId));
+
+                        <div id="MatureProductFormChild_@counter">
+                            <div class="form-group">
+                                @Html.Label("", "Composed Product " + counter, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.DropDownList("ComposedProductChild_" + counter.ToString(), listSelect.ElementAt(counter - 1), new { @class = "form-control", @required = "required" })
+                                    @*@Html.ValidationMessageFor(model => model., "", new { @class = "text-danger" })*@
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.OutputProduct, "Percentage ", htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="col-md-10">
+                                    @Html.TextBox("ProductPercentageChild_" + counter, item.ProductSourcePercentage, htmlAttributes: new { @class = "form-control money-format2", @required = "required", @maxlength = "6" })
+                                    @*  @Html.ValidationMessageFor(model => model.RawProduct, "", new { @class = "text-danger" })*@
+                                </div>
+                            </div>
+                        </div>
+                        counter++;
+                    }
+
+                }
+
+            </div>
+
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
         }
 
         <div class="box-footer">
