--- a/Web.MainApplication/Views/Ritase/Create.cshtml
+++ b/Web.MainApplication/Views/Ritase/Create.cshtml
@@ -122,7 +122,7 @@
     (function ($) {
         //Date picker
         $('#RITASETIME').datetimepicker({
-            format: 'MM/DD/YYYY HH:mm:ss'
+            format: 'DD/MM/YYYY HH:mm:ss'
         });
         $('#QuantityInTon').number(true, 2).attr("maxlength", "6");
     }(jQuery));
