--- a/Web.MainApplication/Views/Client/ClientNostroBank.cshtml
+++ b/Web.MainApplication/Views/Client/ClientNostroBank.cshtml
@@ -7,7 +7,7 @@
 <h2>ClientNostroBank</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "ClientNostroBankCreate", new { id = (int)ViewBag.IdClient})
 </p>
 <table class="table">
     <tr>
