--- a/Web.MainApplication/Views/Client/ClientNostroBankCreate.cshtml
+++ b/Web.MainApplication/Views/Client/ClientNostroBankCreate.cshtml
@@ -6,13 +6,14 @@
 
 <h2>View</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>ClientNostroBank</h4>
         <hr />
+        @Html.Hidden("Client", Model.Client)
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.ClientNostroBankId, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -22,13 +23,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Client, "Client", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Client", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Client, "", new { @class = "text-danger" })
-            </div>
-        </div>
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.BankId, htmlAttributes: new { @class = "control-label col-md-2" })
